--- a/ShoppingCart.BL/ShoppingCart.BL.csproj
+++ b/ShoppingCart.BL/ShoppingCart.BL.csproj
@@ -53,15 +53,19 @@
   <ItemGroup>
     <Compile Include="Managers\AddressManager.cs" />
     <Compile Include="Managers\AddressTypeManager.cs" />
+    <Compile Include="Managers\AssociativeEntityManager.cs" />
     <Compile Include="Managers\BaseManager.cs" />
     <Compile Include="Managers\CustomerManager.cs" />
     <Compile Include="Managers\Interfaces\IAddressManager.cs" />
     <Compile Include="Managers\Interfaces\IAddressTypeManager.cs" />
+    <Compile Include="Managers\Interfaces\IAssociativeEntityManager.cs" />
     <Compile Include="Managers\Interfaces\ICustomerManager.cs" />
+    <Compile Include="Managers\Interfaces\IMainEntityManager.cs" />
     <Compile Include="Managers\Interfaces\IManager.cs" />
     <Compile Include="Managers\Interfaces\IOrderItemManager.cs" />
     <Compile Include="Managers\Interfaces\IOrderManager.cs" />
     <Compile Include="Managers\Interfaces\IProductManager.cs" />
+    <Compile Include="Managers\MainEntityManager.cs" />
     <Compile Include="Managers\OrderItemManager.cs" />
     <Compile Include="Managers\OrderManager.cs" />
     <Compile Include="Managers\ProductManager.cs" />
@@ -74,15 +78,19 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AddressRepository.cs" />
     <Compile Include="Repositories\AddressTypeRepository.cs" />
+    <Compile Include="Repositories\AssociativeEntityRepository.cs" />
     <Compile Include="Repositories\BaseRepository.cs" />
     <Compile Include="Repositories\CustomerRepository.cs" />
     <Compile Include="Repositories\Interfaces\IAddressRepository.cs" />
     <Compile Include="Repositories\Interfaces\IAddressTypeRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IAssociativeEntityRepository.cs" />
     <Compile Include="Repositories\Interfaces\ICustomerRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IMainEntitiesRepository.cs" />
     <Compile Include="Repositories\Interfaces\IOrderItemRepository.cs" />
     <Compile Include="Repositories\Interfaces\IOrderRepository.cs" />
     <Compile Include="Repositories\Interfaces\IProductRepository.cs" />
     <Compile Include="Repositories\Interfaces\IRepository.cs" />
+    <Compile Include="Repositories\MainEntityRepository.cs" />
     <Compile Include="Repositories\OrderItemRepository.cs" />
     <Compile Include="Repositories\OrderRepository.cs" />
     <Compile Include="Repositories\ProductRepository.cs" />
