--- a/ShoppingCart2/ShoppingCart.csproj
+++ b/ShoppingCart2/ShoppingCart.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddressCode.cs" />
     <Compile Include="Customer\CustomerForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +73,9 @@
     <Compile Include="Customer\EditCustomerForm.Designer.cs">
       <DependentUpon>EditCustomerForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\AddressDTO.cs" />
+    <Compile Include="Models\CustomerDTO.cs" />
+    <Compile Include="Models\OrderDTO.cs" />
     <Compile Include="Order\CheckoutForm.cs">
       <SubType>Form</SubType>
     </Compile>
