Changes in Forms and Repositories: - Created DTOs - Refactored code on how data is displayed in CustomerProfile and CustomerForm using DTOs - Fixed code that uses AddressCode enum values instead of AddressType's Name values - Created GetByCode() in AddressTypeRepository that fetches list of AddressTypes based on AddressCode

--- a/ShoppingCart.BL/ShoppingCart.BL.csproj
+++ b/ShoppingCart.BL/ShoppingCart.BL.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\AddressCode.cs" />
     <Compile Include="Managers\AddressManager.cs" />
     <Compile Include="Managers\AddressTypeManager.cs" />
     <Compile Include="Managers\JunctionEntityManager.cs" />
